--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="header-top">
+    <section class="header-top">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 header-top-contact">
@@ -33,9 +33,44 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     
-    <header></header>
+    <header class="py-3">
+
+        <nav class="navbar navbar-expand-lg">
+
+            <section class="container">
+
+                <div class="container-fluid d-flex">
+
+                    <a class="navbar-brand" href="#">Dental Health</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    
+                    <!-- <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </li>
+                      </ul>
+                    </div> -->
+
+                </div>
+
+            </section>
+
+          </nav>
+    </header>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
