--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@
     </div>
   </section>
 
+  <section class="what-we-do-section">
+    <div class="container my-5">
+      <div class="row">
+        <!-- <h3 class="what-we-do-title text-center mb-5">What We Do</h3> -->
+        <h1 class="about-title-section text-center mb-5">What We Do</h1>
+      </div>
+    </div>
+  </section>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
