--- a/index.html
+++ b/index.html
@@ -188,9 +188,6 @@
             Suspendisse id felis sed felis tincidunt finibus. Nulla sed in justo inter tellus. Donec ut felis ante.
             Quisque acin sapien quis orci pulvinar finibus quis urna. onec consequat sapien ut leo cursus rhoncus.
             Nullam dui mi, vulputate ac quis eu urna Quisque quis eu urna lorem elit.
-
-            Quisque ac sapien quis orci pulvinar finibus quis eu urna Quisque Suspendisse id felis sed felis tincidunt
-            finibus. Nulla sed justo tellus. Donec ut felis ante ipsum.
           </p>
           <p>
             Quisque ac sapien quis orci pulvinar finibus quis eu urna Quisque Suspendisse id felis sed felis tincidunt
@@ -202,7 +199,7 @@
     </div>
   </section>
 
-  <section class="what-we-do-section">
+  <section class="what-we-do-section py-5">
     <div class="container my-5">
       <div class="row">
         <!-- <h3 class="what-we-do-title text-center mb-5">What We Do</h3> -->
