--- a/index.html
+++ b/index.html
@@ -204,6 +204,16 @@
       <div class="row">
         <!-- <h3 class="what-we-do-title text-center mb-5">What We Do</h3> -->
         <h1 class="about-title-section text-center mb-5">What We Do</h1>
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+        </div>
+        <div class="row">
+          <div class=""></div>
+          <div class=""></div>
+          <div class=""></div>
+        </div>
       </div>
     </div>
   </section>
