--- a/index.html
+++ b/index.html
@@ -205,15 +205,73 @@
         <!-- <h3 class="what-we-do-title text-center mb-5">What We Do</h3> -->
         <h1 class="about-title-section text-center mb-5">What We Do</h1>
         <div class="row">
-          <div class="col-4"></div>
-          <div class="col-4"></div>
-          <div class="col-4"></div>
+
+          <div class="col-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Service1</h5>
+                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
+                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Service2</h5>
+                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
+                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Service3</h5>
+                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
+                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+              </div>
+            </div>
+          </div>
+
         </div>
+
         <div class="row">
-          <div class=""></div>
-          <div class=""></div>
-          <div class=""></div>
+
+          <div class="col-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Servico1</h5>
+                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
+                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Servico2</h5>
+                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
+                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Servico3</h5>
+                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
+                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+              </div>
+            </div>
+          </div>
+
         </div>
+
       </div>
     </div>
   </section>
