--- a/index.html
+++ b/index.html
@@ -285,65 +285,31 @@
         <div class="row">
 
           <div class="col-4">
-            <div class="card">
+            <div class="card card-testimonial p-4">
               <div class="card-body">
-                <h5 class="card-title">Service1</h5>
-                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
-                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+                <span class="fa fa-quote-right"></span>
+                <p class="card-text">Sed semper leo metus, a lacinia eros ut semper at. Etiam sodales orci sit amet
+                  vehicula pellentesque. blandit nec sed tellus. Nam pharetra.</p>
               </div>
             </div>
           </div>
 
           <div class="col-4">
-            <div class="card">
+            <div class="card card-testimonial p-4">
               <div class="card-body">
-                <h5 class="card-title">Service2</h5>
-                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
-                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+                <span class="fa fa-quote-right"></span>
+                <p class="card-text">Sed semper leo metus, a lacinia eros ut semper at. Etiam sodales orci sit amet
+                  vehicula pellentesque. blandit nec sed tellus. Nam pharetra.</p>
               </div>
             </div>
           </div>
 
           <div class="col-4">
-            <div class="card">
+            <div class="card card-testimonial p-4">
               <div class="card-body">
-                <h5 class="card-title">Service3</h5>
-                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
-                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="row mt-4">
-
-          <div class="col-4">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Servico1</h5>
-                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
-                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-4">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Servico2</h5>
-                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
-                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-4">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Servico3</h5>
-                <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
-                  sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+                <span class="fa fa-quote-right"></span>
+                <p class="card-text">Sed semper leo metus, a lacinia eros ut semper at. Etiam sodales orci sit amet
+                  vehicula pellentesque. blandit nec sed tellus. Nam pharetra.</p>
               </div>
             </div>
           </div>
