--- a/index.html
+++ b/index.html
@@ -292,14 +292,13 @@
                   vehicula pellentesque. blandit nec sed tellus. Nam pharetra.</p>
               </div>
             </div>
-          </div>
-
-          <div class="col-4">
-            <div class="card card-testimonial p-4">
-              <div class="card-body">
-                <span class="fa fa-quote-right"></span>
-                <p class="card-text">Sed semper leo metus, a lacinia eros ut semper at. Etiam sodales orci sit amet
-                  vehicula pellentesque. blandit nec sed tellus. Nam pharetra.</p>
+            <div class="info-perfil-section d-flex mt-3">
+              <div class="img-perfil">
+                <img src="img/ser1.jpg" alt="ser1" class="img-fluid">
+              </div>
+              <div class="info-perfil align-self-end">
+                <h5>Mary Jean</h5>
+                <p class="font-italic">- March 3, 2019.</p>
               </div>
             </div>
           </div>
@@ -312,8 +311,73 @@
                   vehicula pellentesque. blandit nec sed tellus. Nam pharetra.</p>
               </div>
             </div>
+            <div class="info-perfil-section d-flex mt-3">
+              <div class="img-perfil">
+                <img src="img/ser2.jpg" alt="ser1" class="img-fluid">
+              </div>
+              <div class="info-perfil align-self-end">
+                <h5>Mary Jean</h5>
+                <p class="font-italic">- March 3, 2019.</p>
+              </div>
+            </div>
           </div>
 
+          <div class="col-4">
+            <div class="card card-testimonial p-4">
+              <div class="card-body">
+                <span class="fa fa-quote-right"></span>
+                <p class="card-text">Sed semper leo metus, a lacinia eros ut semper at. Etiam sodales orci sit amet
+                  vehicula pellentesque. blandit nec sed tellus. Nam pharetra.</p>
+              </div>
+            </div>
+            <div class="info-perfil-section d-flex mt-3">
+              <div class="img-perfil">
+                <img src="img/ser3.jpg" alt="ser1" class="img-fluid">
+              </div>
+              <div class="info-perfil align-self-end">
+                <h5>Mary Jean</h5>
+                <p class="font-italic">- March 3, 2019.</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="news-section py-5">
+    <div class="container my-5">
+      <div class="row">
+        <h1 class="news-title-section text-center mb-5">Latest News</h1>
+
+        <div class="row mb-5">
+          <div class="img-blog-section col-7">
+            <img src="img/blog1.jpg" alt="blog1" class="img-fluid img-blog">
+          </div>
+          <div class="blog-info col-5">
+            <h5 class="mt-5">March 3, 2019.</h5>
+            <h4 class="my-3">Nullam Dui Mi, Vulputate Ac Cursus.</h4>
+            <p>onec consequat sapien ut leo cursus rhoncus. Nullam duit mi, vulputate ac metus semper Nullam dui mi.
+              Vestibulum ante ipsum primis in faucibus orci luctus et ultrices morbi posuere cubilia Curae; Curabitur
+              quis luctus lectus. leo et cursus rhoncus. Nullam dui mi, vulputate cursus.</p>
+            <a href="single.html" class="btn-banner mt-3"> View Post </a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="blog-info col-5">
+            <h5 class="mt-5">March 3, 2019.</h5>
+            <h4 class="my-3">Nullam Dui Mi, Vulputate Ac Cursus.</h4>
+            <p>onec consequat sapien ut leo cursus rhoncus. Nullam duit mi, vulputate ac metus semper Nullam dui mi.
+              Vestibulum ante ipsum primis in faucibus orci luctus et ultrices morbi posuere cubilia Curae; Curabitur
+              quis luctus lectus. leo et cursus rhoncus. Nullam dui mi, vulputate cursus.</p>
+            <a href="single.html" class="btn-banner mt-3"> View Post </a>
+          </div>
+          <div class="img-blog-section col-7">
+            <img src="img/blog1.jpg" alt="blog1" class="img-fluid img-blog">
+          </div>
         </div>
 
       </div>
