--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="row">
 
           <div class="col-4">
-            <div class="card">
+            <div class="card border-0">
               <div class="card-body">
                 <h5 class="card-title">Service1</h5>
                 <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
@@ -218,7 +218,7 @@
           </div>
 
           <div class="col-4">
-            <div class="card">
+            <div class="card border-0">
               <div class="card-body">
                 <h5 class="card-title">Service2</h5>
                 <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
@@ -228,7 +228,7 @@
           </div>
 
           <div class="col-4">
-            <div class="card">
+            <div class="card border-0">
               <div class="card-body">
                 <h5 class="card-title">Service3</h5>
                 <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
@@ -242,7 +242,7 @@
         <div class="row mt-4">
 
           <div class="col-4">
-            <div class="card">
+            <div class="card border-0">
               <div class="card-body">
                 <h5 class="card-title">Servico1</h5>
                 <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
@@ -252,7 +252,7 @@
           </div>
 
           <div class="col-4">
-            <div class="card">
+            <div class="card border-0">
               <div class="card-body">
                 <h5 class="card-title">Servico2</h5>
                 <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
@@ -262,7 +262,7 @@
           </div>
 
           <div class="col-4">
-            <div class="card">
+            <div class="card border-0">
               <div class="card-body">
                 <h5 class="card-title">Servico3</h5>
                 <p class="card-text">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices
