--- a/index.html
+++ b/index.html
@@ -384,6 +384,16 @@
     </div>
   </section>
 
+  <section class="appointment-section">
+    <div class="container">
+      <div class="row">
+        <h4>make your dream smile a reality</h4>
+        <p class="mt-3">Call Us To Book Your Appointment Today</p>
+        <a href="contact.html">Book an Appointment</a>
+      </div>
+    </div>
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
