--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
     </div>
   </section>
 
-  <section class="appointment-section">
-    <div class="container">
+  <section class="appointment-section text-center py-5">
+    <div class="container py-3">
       <div class="row">
         <h4>make your dream smile a reality</h4>
         <p class="mt-3">Call Us To Book Your Appointment Today</p>
