--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
       <div class="row">
         <h4>make your dream smile a reality</h4>
         <p class="mt-3">Call Us To Book Your Appointment Today</p>
-        <a class="mt-3 href="contact.html">Book an Appointment</a>
+        <a class="mt-3" href="contact.html">Book an Appointment</a>
       </div>
     </div>
   </section>
