--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <div class="row">
         <div class="col-sm-6 header-top-contact">
           <span class="fa fa-envelope-open"></span>
-          <a href="mailto:info@example.com" class="me-3">info@example.com</a>
+          <a href="mailto:info@example.com" class="me-3 email"> info@example.com</a>
           <span class="fa fa-phone"></span>
-          <p class="d-inline-block">Call Us +12 345 678</p>
+          <p class="d-inline-block"> Call Us +12 345 678</p>
         </div>
         <div class="col-sm-6 d-flex justify-content-end header-top-contact">
           <p class="d-inline-block me-3">
@@ -48,7 +48,10 @@
       <section class="container">
         <div class="container-fluid d-flex justify-content-between">
 
-          <a class="navbar-brand" href="#">Dental Health</a>
+          <a class="navbar-brand logo" href="#">
+            <h1><span class="fa fa-stethoscope"></span>
+            Dental Health</h1>
+          </a>
 
           <div class="container-navbar">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -427,7 +430,7 @@
           </p>
           <p>
             <span class="mr-2 fa fa-envelope"></span>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="email" href="mailto:info@example.com" class="email"> info@example.com</a>
           </p>
         </div>
         <div class="col-2 footer-quick-links">
@@ -478,7 +481,7 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script> -->
-    
+
     <!-- bootstrap@5.3.2 -->
     <script src="js/bootstrap.bundle.min.js"></script>
 
